Potential sub section alignment fix

--- a/Styling/ProjectPageStyle.css
+++ b/Styling/ProjectPageStyle.css
@@ -62,10 +62,12 @@ div.sub-projects {
     display: inline-block; 
     /* display: flex;  */
     /* padding: 10%;  */
+    height: 100%; 
     padding-inline: 3%; 
     margin-top: 0px; 
     vertical-align: top; 
 }
+
 /* .sub-projects.space-around{ */
     /* justify-content: space-around;  */
 /* } */
